small addition to our pae content.

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
     <title>Hello Nitda--test</title>
 </head>
 <body>
-   <h1>Hello Nitda--test!</h1> 
+   <h1>Hello Nitda--test! it's a great course!</h1> 
 </body>
 </html>
